--- a/views/todoEdit.ejs
+++ b/views/todoEdit.ejs
@@ -19,7 +19,7 @@
 <form action="/edit/<%= details._id %>" method="POST">
 <input type="text" value="<%= details.content %>" name="content">
 <button type="submit" class="finish-button">Klar</button>
-<a href="/" class="cancel-button">Stäng</a>
+<a href="/todo" class="cancel-button">Stäng</a>
 </form>
 </li>
 <% } else { %>
