--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,4 +1,10 @@
-
+<!DOCTYPE html>
+<head>
+<title>Felicias Todo App</title>
+<link rel="stylesheet" href="/static/stylesheets/main.css" type="text/css">
+<script src="https://kit.fontawesome.com/8a91947445.js" crossorigin="anonymous"></script>
+</head>
+<body>
 
 <form action="/register" method="post">
 
@@ -18,3 +24,6 @@
   <a href="/login"> Login</a>
 
 </form>
+
+</body>
+</html>
