--- a/views/resetPasswordForm.ejs
+++ b/views/resetPasswordForm.ejs
@@ -1,4 +1,10 @@
-
+<!DOCTYPE html>
+<head>
+<title>Felicias Todo App</title>
+<link rel="stylesheet" href="/static/stylesheets/main.css" type="text/css">
+<script src="https://kit.fontawesome.com/8a91947445.js" crossorigin="anonymous"></script>
+</head>
+<body>
 
 <form action="/resetPasswordForm" method="post">
 
@@ -8,3 +14,6 @@
      <button type="submit">Reset Password</button>
 
 </form>
+
+</body>
+</html>
