--- a/views/checkMail.ejs
+++ b/views/checkMail.ejs
@@ -1,5 +1,14 @@
-
+<!DOCTYPE html>
+<head>
+<title>Felicias Todo App</title>
+<link rel="stylesheet" href="/static/stylesheets/main.css" type="text/css">
+<script src="https://kit.fontawesome.com/8a91947445.js" crossorigin="anonymous"></script>
+</head>
+<body>
 
 <div>
     Kolla ditt mail. Annars <a href="/reset">Resend </a>
 </div>
+
+</body>
+</html>
