--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,4 +1,10 @@
-
+<!DOCTYPE html>
+<head>
+<title>Felicias Todo App</title>
+<link rel="stylesheet" href="/static/stylesheets/main.css" type="text/css">
+<script src="https://kit.fontawesome.com/8a91947445.js" crossorigin="anonymous"></script>
+</head>
+<body>
 
 <div>
     Välkommen  <%= user.name %>
@@ -9,3 +15,6 @@
    <a href="/logout">Logout</a>
 
 </div>
+
+</body>
+</html>
