--- a/views/reset.ejs
+++ b/views/reset.ejs
@@ -1,4 +1,10 @@
-
+<!DOCTYPE html>
+<head>
+<title>Felicias Todo App</title>
+<link rel="stylesheet" href="/static/stylesheets/main.css" type="text/css">
+<script src="https://kit.fontawesome.com/8a91947445.js" crossorigin="anonymous"></script>
+</head>
+<body>
 
 <form action="/reset" method="post">
 
@@ -7,3 +13,6 @@
     <button type="submit">Send link</button>
     
     </form>
+
+    </body>
+    </html>
