--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -39,5 +39,5 @@ a:link, a:visited, a:hover {
   text-decoration: none;
   cursor: pointer;
   padding: 5px;
-  background-color: grey;
+  background-color: pink;
   margin-left: 5px; }
