--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,6 @@
 body {
     display: flex;
-    background:black;
+    background: black;
     color: white;
     width: 100%;
     height: 100%;
@@ -41,7 +41,7 @@ body {
         text-decoration: none;
         cursor: pointer;
         padding: 5px;
-        background-color: grey;
+        background-color: pink;
         margin-left: 5px;
         }
 
