--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,11 +1,39 @@
 body {
-    display: flex;
     background: black;
     color: white;
     width: 100%;
     height: 100%;
     font-family: Arial, Helvetica, sans-serif;
     }
+
+    ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        background-color: #333;
+        display: flex;
+        justify-content: center;
+      }
+      
+      li {
+
+        padding: 2%;
+     
+
+      }
+      
+      li a {
+        // display: block;
+        color: white;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+      }
+      
+      li a:hover {
+        background-color: #111;
+      }
 
     .todo-wrapper {
     display: flex;
@@ -44,5 +72,7 @@ body {
         background-color: pink;
         margin-left: 5px;
         }
+
+    
 
       
