--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -1,5 +1,3 @@
-<!-- <%- include("includes/navbar.ejs")%> -->
-
 <!DOCTYPE html>
 <head>
 <title>Felicias Todo App</title>
@@ -7,8 +5,15 @@
 <script src="https://kit.fontawesome.com/8a91947445.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    
+    <ul>
+        <li><a href="/"> Hem </a></li>
+        <li><a href="/todo"> Todo List </a></li>
+        <li><a href="/logout"> Logout </a></li>
+    </ul>
 
 <div class="todo-wrapper">
+
 <h3>ATT GÖRA:</h3>
 
 <form action="/todo" method="POST" class="todo-input">
@@ -29,8 +34,6 @@
     </a>
     </li>
     <% }) %>
-
-    <a href="/logout">Logout</a>
 
 </div>
 </div>
