--- a/views/todoEdit.ejs
+++ b/views/todoEdit.ejs
@@ -5,6 +5,13 @@
 <script src="https://kit.fontawesome.com/8a91947445.js" crossorigin="anonymous"></script>
 </head>
 <body>
+
+    <ul>
+        <li><a href="/"> Hem </a></li>
+        <li><a href="/todo"> Todo List </a></li>
+        <li><a href="/logout"> Logout </a></li>
+    </ul>
+    
 <div class="todo-wrapper">
 <h3>ATT GÖRA:</h3>
 
@@ -33,7 +40,6 @@
 <% } %>
 <% }) %>
 
-<a href="/logout">Logout</a>
 </div>
 </div>
 </body>
