--- a/views/reset.ejs
+++ b/views/reset.ejs
@@ -6,7 +6,13 @@
 </head>
 <body>
 
-<form action="/reset" method="post">
+    <ul>
+        <li><a href="/login"> Login</a></li>
+        <li><a href="/register"> Register</a></li>
+        <li><a href="/reset">Forgot password?</a></li>
+    </ul>
+
+<form class="reset-form" action="/reset" method="post">
 
     <input type="email" name="email" id="" placeholder="Ange ditt mejl">
     
