--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -5,9 +5,9 @@
 <script src="https://kit.fontawesome.com/8a91947445.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    
+
     <ul>
-        <li><a href="/"> Hem </a></li>
+        <li><a href="/home"> Hem </a></li>
         <li><a href="/todo"> Todo List </a></li>
         <li><a href="/logout"> Logout </a></li>
     </ul>
