--- a/views/todoEdit.ejs
+++ b/views/todoEdit.ejs
@@ -7,11 +7,11 @@
 <body>
 
     <ul>
-        <li><a href="/"> Hem </a></li>
+        <li><a href="/home"> Hem </a></li>
         <li><a href="/todo"> Todo List </a></li>
         <li><a href="/logout"> Logout </a></li>
     </ul>
-    
+
 <div class="todo-wrapper">
 <h3>ATT GÖRA:</h3>
 
