--- a/views/checkMail.ejs
+++ b/views/checkMail.ejs
@@ -6,7 +6,13 @@
 </head>
 <body>
 
-<div>
+    <ul>
+        <li><a href="/login"> Login</a></li>
+        <li><a href="/register"> Register</a></li>
+        <li><a href="/reset">Forgot password?</a></li>
+    </ul>
+
+<div class="check-mail">
     Kolla ditt mail. Annars <a href="/reset">Resend </a>
 </div>
 
