--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,16 +6,18 @@
 </head>
 <body>
 
-<form action="/login" method="post">
+    <ul>
+        <li><a href="/login"> Login</a></li>
+        <li><a href="/register"> Register</a></li>
+        <li><a href="/reset">Forgot password?</a></li>
+    </ul>
+
+<form class="login-form" action="/login" method="post">
 
     <input type="text" name="email" id="" placeholder="Email">
     <input type="password" name="password" id="" placeholder="password">
 
     <button type="submit">Login</button>
-
-    <span>Don't have account? </span>
-    <a href="/register"> Register</a>
-    <a href="/reset">Forgot password?</a>
 
 </form>
 
