--- a/views/resetPasswordForm.ejs
+++ b/views/resetPasswordForm.ejs
@@ -6,7 +6,13 @@
 </head>
 <body>
 
-<form action="/resetPasswordForm" method="post">
+     <ul>
+          <li><a href="/login"> Login</a></li>
+          <li><a href="/register"> Register</a></li>
+          <li><a href="/reset">Forgot password?</a></li>
+      </ul>
+
+<form class="reset-password-form" action="/resetPasswordForm" method="post">
 
      <input type="password" name="password" id="" placeholder="Ange ditt nytt lösenord">
      <input type="email" name="email" value="<%= email %>" hidden >
