--- a/views/checkMail.ejs
+++ b/views/checkMail.ejs
@@ -13,7 +13,7 @@
     </ul>
 
 <div class="check-mail">
-    Kolla ditt mail. Annars <a href="/reset">Resend </a>
+    Har du inte fått något mail?<a href="/reset">Skicka igen </a>
 </div>
 
 </body>
