--- a/views/reset.ejs
+++ b/views/reset.ejs
@@ -7,16 +7,16 @@
 <body>
 
     <ul>
-        <li><a href="/login"> Login</a></li>
-        <li><a href="/register"> Register</a></li>
-        <li><a href="/reset">Forgot password?</a></li>
+        <li><a href="/login">Logga in</a></li>
+        <li><a href="/register"> Registrera</a></li>
+        <li><a href="/reset">Glömt lösenord?</a></li>
     </ul>
 
 <form class="reset-form" action="/reset" method="post">
 
     <input type="email" name="email" id="" placeholder="Ange ditt mejl">
     
-    <button type="submit">Send link</button>
+    <button type="submit">Skicka länk</button>
     
     </form>
 
