--- a/views/resetPasswordForm.ejs
+++ b/views/resetPasswordForm.ejs
@@ -7,9 +7,9 @@
 <body>
 
      <ul>
-          <li><a href="/login"> Login</a></li>
-          <li><a href="/register"> Register</a></li>
-          <li><a href="/reset">Forgot password?</a></li>
+          <li><a href="/login">Logga in</a></li>
+          <li><a href="/register"> Registrera</a></li>
+          <li><a href="/reset">Glömt lösenord?</a></li>
       </ul>
 
 <form class="reset-password-form" action="/resetPasswordForm" method="post">
@@ -17,7 +17,7 @@
      <input type="password" name="password" id="" placeholder="Ange ditt nytt lösenord">
      <input type="email" name="email" value="<%= email %>" hidden >
      
-     <button type="submit">Reset Password</button>
+     <button type="submit">Återställ lösenord</button>
 
 </form>
 
