--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,7 +8,7 @@
 
     <ul>
         <li><a href="/home"> Hem </a></li>
-        <li><a href="/todo"> Todo List </a></li>
+        <li><a href="/todo"> Mina Todo </a></li>
         <li><a href="/logout"> Logout </a></li>
     </ul>
 
