--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,9 +7,9 @@
 <body>
 
     <ul>
-        <li><a href="/login"> Login</a></li>
-        <li><a href="/register"> Register</a></li>
-        <li><a href="/reset">Forgot password?</a></li>
+        <li><a href="/login">Logga in</a></li>
+        <li><a href="/register"> Registrera</a></li>
+        <li><a href="/reset">Glömt lösenord?</a></li>
     </ul>
 
 <form class="login-form" action="/login" method="post">
@@ -17,7 +17,7 @@
     <input type="text" name="email" id="" placeholder="Email">
     <input type="password" name="password" id="" placeholder="password">
 
-    <button type="submit">Login</button>
+    <button type="submit">Logga in</button>
 
 </form>
 
