--- a/views/register.ejs
+++ b/views/register.ejs
@@ -7,9 +7,9 @@
 <body>
 
   <ul>
-    <li><a href="/login"> Login</a></li>
-    <li><a href="/register"> Register</a></li>
-    <li><a href="/reset">Forgot password?</a></li>
+    <li><a href="/login">Logga in</a></li>
+    <li><a href="/register"> Registrera</a></li>
+    <li><a href="/reset">Glömt lösenord?</a></li>
 </ul>
 
 <form class="register-form" action="/register" method="post">
@@ -24,7 +24,7 @@
   <input type="email" name="email" id="" placeholder="Email" >
   <input type="password" name="password" id="" placeholder="Pasword">
   
-  <button type="submit">Register</button>
+  <button type="submit">Registrera</button>
 
 
 
