--- a/views/checkMail.ejs
+++ b/views/checkMail.ejs
@@ -7,13 +7,13 @@
 <body>
 
     <ul>
-        <li><a href="/login"> Login</a></li>
-        <li><a href="/register"> Register</a></li>
-        <li><a href="/reset">Forgot password?</a></li>
+        <li><a href="/login">Logga in</a></li>
+        <li><a href="/register"> Registrera</a></li>
+        <li><a href="/reset">Glömt lösenord?</a></li>
     </ul>
 
 <div class="check-mail">
-    Har du inte fått något mail?<a href="/reset">Skicka igen </a>
+    Har du inte fått något mail? <a href="/reset">Skicka igen </a>
 </div>
 
 </body>
