--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,36 +16,25 @@
     Välkommen  <%= user.name %> 
 </div>
 
-<div class="aquarium">
-    <div class="aquarium__table"></div>
-    <div class="aquarium__aquarium">
-      <div class="aquarium__water"></div>
-      <div class="aquarium__bubble"></div>
-      <div class="aquarium__bubble"></div>
-      <div class="aquarium__bubble"></div>
-      <div class="aquarium__bubble"></div>
-      <div class="aquarium__bubble"></div>
-      <div class="aquarium__bubble"></div>
-      <div class="aquarium__bubble"></div>
-      <div class="aquarium__bubble"></div>
-    </div>
-    <div class="aquarium__drops">
-      <div class="aquarium__drop"></div>
-      <div class="aquarium__water-column"></div>
-      <div class="aquarium__splash"></div>
-      <div class="aquarium__splash"></div>
-    </div>
-    <div class="aquarium__sponge-box">
-      <div class="aquarium__body">
-        <div class="aquarium__body-stripe"></div>
-        <div class="aquarium__body-hole"></div>
-      </div>
-      <div class="aquarium__face">
-        <div class="aquarium__mouth"></div>
-        <div class="aquarium__smile"></div>
-      </div>
-    </div>
+<div class="container">
+  <div class="coffee-header">
+    <div class="coffee-header__buttons coffee-header__button-one"></div>
+    <div class="coffee-header__buttons coffee-header__button-two"></div>
+    <div class="coffee-header__display"></div>
+    <div class="coffee-header__details"></div>
   </div>
+  <div class="coffee-medium">
+    <div class="coffe-medium__exit"></div>
+    <div class="coffee-medium__arm"></div>
+    <div class="coffee-medium__liquid"></div>
+    <div class="coffee-medium__smoke coffee-medium__smoke-one"></div>
+    <div class="coffee-medium__smoke coffee-medium__smoke-two"></div>
+    <div class="coffee-medium__smoke coffee-medium__smoke-three"></div>
+    <div class="coffee-medium__smoke coffee-medium__smoke-for"></div>
+    <div class="coffee-medium__cup"></div>
+  </div>
+  <div class="coffee-footer"></div>
+</div>
 
 </body>
 </html>
